Final touch - Correct logo align + modal box

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -111,6 +111,9 @@ ion-navbar{
 		background: $liliac;
 	}
 }
+.toolbar-ios ion-title{
+	padding: 0;
+}
 
 .toolbar{
 	min-height: 71px;
